test/parser/error/err_10_array_size_invalid.pl0
program p; 
var arr[0]; 
begin 
end